Fixed text strings overlap (#108)
* Fixed text strings overlap

* Cropping file names

--- a/client/client/app/assets/scss/md-components/md-list.scss
+++ b/client/client/app/assets/scss/md-components/md-list.scss
@@ -23,8 +23,10 @@ md-list.md-dense {
       &__sm {
         font-size: $caption-font-size-base;
         min-height: 18px;
-        height: 18px;
         padding: 0;
+      }
+      &__sm::before {
+        min-height: 18px;
       }
 
       &__nospace {
