--- a/client/client/app/components/ngbProjectInfoPanel/ngbProjectInfo/ngbProjectSummary/ngbProjectSummary.scss
+++ b/client/client/app/components/ngbProjectInfoPanel/ngbProjectInfo/ngbProjectSummary/ngbProjectSummary.scss
@@ -18,4 +18,8 @@ ngb-project-summary {
   .project-summary-layout {
     height:100%;
   }
+
+  md-list-item {
+    overflow: hidden;
+  }
 }
